Update test video 1. change a test video which has a smaller size.

--- a/ServiceCrash.html
+++ b/ServiceCrash.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="utf-8">
     <title>Dr. Car Program Description</title>
@@ -9,7 +9,7 @@
 <p>Sorry, it looks like there are something wrong on the connection to our services. Please wait for a moment and try again.
 Or you can look our description video below.</p>
 <video width="640" height="480" controls>
-    <source src="TestVideo(BanGDream).mp4" type="video/mp4">
+    <source src="TestVideo.mp4" type="video/mp4">
     Sorry, your browser doesn't support HTML5 notation.
 </video>
 
